Fixed the my github Profile button alignment #2

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ li:hover, a:hover{
   position: absolute;
   bottom: 20px;
   left: 40px;
+  display: block;
   margin: 20px auto;
 }
 .github-button svg{
